# kdev-flatpakbuilder

./: CMakeLists.txt  README.md  kdevflatpak.rc  kdevflatpakbuilder.desktop  kdevflatpakbuilder.json
po/: Messages.sh  en.po  pl.po
src/: CMakeLists.txt  flatpakbuilderconfig.cpp  flatpakbuilderconfig.h  flatpakbuilderjob.cpp  flatpakbuilderjob.h  flatpakbuilderplugin.cpp  flatpakbuilderplugin.h  flatpakbuildoutputparser.cpp  flatpakbuildoutputparser.h
src/ui/: flatpakbuilderconfigwidget.cpp  flatpakbuilderconfigwidget.h  flatpakbuilderconfigwidget.ui
